# IMGStarterTemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
VisQuant/GUI/: guisample.cpp  vqui.cpp  vqui.h
